--- a/bio.html
+++ b/bio.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>[ Zeinalipour | Short Biography ]</title>
+<title>[ Voss | Short Biography ]</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Font Awesome Icons -->
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span><a href="#"><img border="0" width="170" src="images/csucy.png"/></a></span>
+            <span><a href="#"><img border="0" width="170" src="images/banner-topleft.png"/></a></span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -87,16 +87,6 @@
                     <a href="index.html#service">Service</a>
                 </li>
                 <li class="page-scroll">
-                <a href="index.html#advising">Advising</a>
-                </li>
-                <li class="page-scroll">
-                    <a target="_blank" href="http://dmsl.cs.ucy.ac.cy/projects.php">Grants</a>
-                </li>
-
-                <li class="page-scroll">
-                    <a href="index.html#contact">Contact</a>
-                </li>
-                <li class="page-scroll">
                     <a onclick="$('#bs-example-navbar-collapse-2').toggle();">
                         <span class="glyphicon glyphicon-search"></span>
                     </a>
@@ -128,9 +118,9 @@
 <section id="home">
     <div class="container lead">
 
-    <h3>Short Biography of Demetris Zeinalipour</h1>
+    <h3>Short Biography of Nicholas Voss</h1>
 
-    <p>Demetris Zeinalipour is an Assistant Professor of Computer Science at the University of Cyprus, directing the Data Management Systems Laboratory (DMSL). He got his Ph.D. and M.Sc. in Computer Science and Engineering from the University of California - Riverside in 2005 and 2003, respectively. He got his B.Sc. in Computer Science from the University of Cyprus in 2000. He has held short-term research positions at the Network Intelligence Lab of Akamai Technologies, Cambridge, MA, USA and the University of Pittsburgh, PA, USA. Between 2005 and 2012, he has served the University of Cyprus and the Open University of Cyprus as a Lecturer of Computer Science. His research interests  include Data Management in Computer Systems and Networks, particularly Mobile and Sensor Data Management; Big Data Management in Parallel and Distributed Architectures; Spatio-Temporal Data Management; Network and Web 2.0 Data Management; Crowd and Indoor Data Management; Data Privacy Management. His h-index is 21, holds over 2070 citations, has an Erd&#337;s number of 3, won 5 international awards (IPSN'14, EVARILOS'14, APPCAMPUS'13, MDM'12, CIC'06) nd delivered over 30 invited talks. He is a TPC member for major Data Management conferences including: ACM SIGMOD, VLDB, IEEE ICDE, IEEE MDM, ACM CIKM, ACM SIGKDD. He has also been a TPC co-chair for 5 conferences and workshops           (MDM'10, HuMoComP'15/MDM, DMSN'10/VLDB, MobiDE'09/SIGMOD) as well as a referee for several IEEE and ACM journals, including TKDE, TPDS, TIST, TMC, TEC, TVT,              TC and VLDB Journal.&nbsp; He has participated in projects funded by the US NSF #0220148, #0330481, EU's CoreGRID Network of Excellence (#IST-2002-004265), EU's EGEE (#IST-2003-508833) and by the Cyprus RPF. He participated in EU's Marie Curie Host Fellowships for the Transfer of Knowledge "SEARCHiN: SEARCHing in a Networked world", EU's CONET Network of Excellence (#FP7-224053). He is the PI of project "SmartNet: A Hardware Testbed for Testing Smartphone Network Applications", funded by UCY and has also been the PI of project "SenseView: An Energy Efficient Data Acquisition Framework for Wireless Sensor Networks", funded by the Open University of Cyprus. Finally, he has extensively been involved in industrial Research and Development projects: Cywee (Taiwan) and              Microsoft/Nokia/Aalto (Finland) and MTN (Cyprus) but has also technically also lead several mobile data management services including: i) Anyplace (an Indoor Information Service); ii) SmartLab (a programmable smartphone testbed); and iii) Rayzit (a crowd messaging network). He is a member of the ACM (SIGMOD), the IEEE (Computer Society) and the USENIX Association. For more information please visit: <a href="http://www.cs.ucy.ac.cy/%7Edzeina/">http://www.cs.ucy.ac.cy/~dzeina/</a> or the DMSL website: <a href="http://dmsl.cs.ucy.ac.cy/">http://dmsl.cs.ucy.ac.cy/</a><br>
+    <p>Nicholas Voss is a graduate student in Geophysics at the University of South Florida (USF), working with the Geodesy lab. Prior to USF, He recieved his B.Sc. in Geology from the University of Miami in 2013. His research interests include geodesy,seismology, and tectonics. He is particularly interested in understanding strain accumulation and release through out the earthquake cycle. His thesis looks at how Slow Slip Earthquakes, eartquakes that take place over days to years, fit within the earthuake cycle. He is also interested in increasing computer science knowledge for geoscience students as such he has been a leader/instructor for USF Geoscience Programming User Group (GeoPUG) where students learn about topics ranging from python to latex.</a><br>
             </p>
         </div>
         </div>
@@ -142,7 +132,7 @@
     <center>
         © 2015 | D. Zeinalipour. Credits: AR template
     <a onclick="javascript:$('#credit').toggle();"><img border="0" src="images/ccby.png"/></a>
-    <div style="display:none;" id="credit">[AR template available under Creative Commons CC BY 4.0 licence: 
+    <div style="display:none;" id="credit">[AR template available under Creative Commons CC BY 4.0 licence:
     <a href="https://github.com/dmsl/academic-responsive-template"_blank">
         https://github.com/dmsl/academic-responsive-template
     </a> ]
