--- a/bio.html
+++ b/bio.html
@@ -47,7 +47,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <span><a href="#"><img border="0" width="170" src="images/banner-topleft.png"/></a></span>
+            <span><a href="#"><img border="0" width="100" src="images/banner-topleft.png"/></a></span>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -109,7 +109,7 @@
 
 <section id="tree" style="margin-top:50px">
     <div class="container">
-        <a href="index.html">Zeinalipour</a> > Short Biography
+        <a href="index.html">Voss</a> > Short Biography
     </div>
 </section>
 
